Add function ml_vocabulary to get vocabulary sizes!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ml_add_participants)
 export(ml_logs)
 export(ml_participants)
 export(ml_responses)
+export(ml_vocabulary)
 import(dplyr)
 import(shiny)
 import(tidyr)
