--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
 import(dplyr)
+import(ggplot2)
 import(shiny)
 import(shinydashboard)
 import(tidyr)
@@ -17,4 +18,6 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,select)
 importFrom(dplyr,vars)
+importFrom(janitor,clean_names)
+importFrom(scales,label_percent)
 importFrom(tidyr,drop_na)
