Add ml_norms to compute item-wise norms, adjusting estimations for proportions following Gelman, Hill & Vehtari (2020)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(ml_app)
 export(ml_logs)
+export(ml_norms)
 export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
@@ -16,6 +17,7 @@ importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
 importFrom(dplyr,vars)
 importFrom(janitor,clean_names)
