Add norms tab to app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,9 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
 importFrom(dplyr,vars)
+importFrom(htmltools,withTags)
 importFrom(janitor,clean_names)
 importFrom(scales,label_percent)
+importFrom(scales,percent)
+importFrom(stringr,str_to_sentence)
 importFrom(tidyr,drop_na)
