Complete IPA transcriptions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,17 @@ URL: https://gongcastro.github.io/multilex
 BugReports: https://github.com/gongcastro/multilex/issues
 RoxygenNote: 7.1.1
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    dplyr,
+    tidyr,
+    purrr,
+    tibble,
+    googlesheets4,
+    lubridate,
+    shiny,
+    shinyalert,
+    shinydashboard,
+    DT,
+    formr
 Suggests: 
     testthat
