--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,pull)
+importFrom(dplyr,relocate)
 importFrom(dplyr,select)
 importFrom(dplyr,vars)
 importFrom(htmltools,withTags)
@@ -26,3 +28,4 @@ importFrom(scales,label_percent)
 importFrom(scales,percent)
 importFrom(stringr,str_to_sentence)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_wider)
