Remove leading apostrophes in pool

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,19 +13,33 @@ import(shinydashboard)
 import(tidyr)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(formr,formr_connect)
 importFrom(htmltools,withTags)
 importFrom(janitor,clean_names)
+importFrom(lubridate,as_date)
+importFrom(readxl,read_xlsx)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_sentence)
+importFrom(stringr,str_to_upper)
+importFrom(stringr,str_trim)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
