--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,53 +8,29 @@ export(ml_norms)
 export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
+import(dplyr)
+import(ggplot2)
+import(shiny)
+import(shinydashboard)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
-importFrom(dplyr,bind_rows)
-importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
-importFrom(dplyr,group_by_at)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
-importFrom(dplyr,mutate_if)
-importFrom(dplyr,n)
-importFrom(dplyr,pull)
-importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
-importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(formr,formr_connect)
 importFrom(formr,formr_raw_results)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,element_blank)
-importFrom(ggplot2,element_text)
-importFrom(ggplot2,geom_col)
-importFrom(ggplot2,geom_errorbar)
-importFrom(ggplot2,geom_histogram)
-importFrom(ggplot2,geom_hline)
-importFrom(ggplot2,geom_label)
-importFrom(ggplot2,geom_line)
-importFrom(ggplot2,geom_point)
-importFrom(ggplot2,geom_tile)
-importFrom(ggplot2,ggplot)
-importFrom(ggplot2,labs)
-importFrom(ggplot2,scale_colour_brewer)
-importFrom(ggplot2,scale_fill_brewer)
-importFrom(ggplot2,scale_fill_distiller)
-importFrom(ggplot2,scale_x_continuous)
-importFrom(ggplot2,scale_y_continuous)
-importFrom(ggplot2,theme)
-importFrom(ggplot2,theme_minimal)
 importFrom(googlesheets4,gs4_auth)
 importFrom(googlesheets4,gs4_has_token)
 importFrom(googlesheets4,read_sheet)
@@ -73,39 +49,8 @@ importFrom(purrr,set_names)
 importFrom(readxl,read_xlsx)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
-importFrom(shiny,actionButton)
-importFrom(shiny,br)
-importFrom(shiny,checkboxGroupInput)
-importFrom(shiny,checkboxInput)
-importFrom(shiny,column)
-importFrom(shiny,dateInput)
-importFrom(shiny,fluidRow)
-importFrom(shiny,h2)
-importFrom(shiny,icon)
-importFrom(shiny,numericInput)
-importFrom(shiny,observeEvent)
-importFrom(shiny,plotOutput)
-importFrom(shiny,renderPlot)
-importFrom(shiny,renderText)
-importFrom(shiny,selectInput)
-importFrom(shiny,shinyApp)
-importFrom(shiny,shinyServer)
-importFrom(shiny,shinyUI)
-importFrom(shiny,sliderInput)
-importFrom(shiny,stopApp)
-importFrom(shiny,textInput)
-importFrom(shiny,textOutput)
-importFrom(shiny,withTags)
 importFrom(shinyalert,shinyalert)
 importFrom(shinyalert,useShinyalert)
-importFrom(shinydashboard,box)
-importFrom(shinydashboard,dashboardBody)
-importFrom(shinydashboard,dashboardHeader)
-importFrom(shinydashboard,dashboardPage)
-importFrom(shinydashboard,menuItem)
-importFrom(shinydashboard,sidebarMenu)
-importFrom(shinydashboard,tabItem)
-importFrom(shinydashboard,tabItems)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
