--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     shinydashboard,
     DT,
     formr,
-    magrittr
+    magrittr,
+    lifecycle
 URL: https://gongcastro.github.io/multilex
 BugReports: https://github.com/gongcastro/multilex/issues
 RoxygenNote: 7.1.1
@@ -42,3 +43,4 @@ Depends:
     formr
 Suggests: 
     testthat
+RdMacros: lifecycle
