--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ml_norms)
 export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
+import(Cairo)
 import(dplyr)
 import(ggplot2)
 import(shiny)
