--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,30 +8,22 @@ export(ml_norms)
 export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
+export(ml_wordcloud)
 import(Cairo)
 import(dplyr)
 import(ggplot2)
 import(shiny)
 import(shinydashboard)
-importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
-importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
-importFrom(dplyr,left_join)
-importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
-importFrom(dplyr,rename)
-importFrom(dplyr,rename_all)
-importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
-importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(formr,formr_connect)
-importFrom(formr,formr_raw_results)
 importFrom(googlesheets4,gs4_auth)
 importFrom(googlesheets4,gs4_has_token)
 importFrom(googlesheets4,read_sheet)
@@ -39,23 +31,17 @@ importFrom(googlesheets4,sheet_append)
 importFrom(htmltools,withTags)
 importFrom(janitor,clean_names)
 importFrom(lubridate,as_date)
-importFrom(lubridate,as_datetime)
 importFrom(lubridate,now)
 importFrom(lubridate,today)
 importFrom(magrittr,"%>%")
-importFrom(purrr,map)
 importFrom(purrr,map_lgl)
-importFrom(purrr,reduce)
-importFrom(purrr,set_names)
 importFrom(readxl,read_xlsx)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
 importFrom(shinyalert,shinyalert)
 importFrom(shinyalert,useShinyalert)
 importFrom(stringr,str_detect)
-importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
-importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_sentence)
 importFrom(stringr,str_to_upper)
@@ -64,3 +50,4 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,head)
+importFrom(wordcloud2,wordcloud2)
