Remove ml_wordcloud

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(ml_norms)
 export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
-export(ml_wordcloud)
 import(Cairo)
 import(dplyr)
 import(ggplot2)
@@ -21,26 +20,27 @@ importFrom(childesr,get_tokens)
 importFrom(dplyr,arrange)
 importFrom(dplyr,between)
 importFrom(dplyr,count)
-importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
-importFrom(dplyr,vars)
 importFrom(formr,formr_connect)
 importFrom(googlesheets4,gs4_auth)
 importFrom(googlesheets4,gs4_has_token)
 importFrom(googlesheets4,sheet_append)
 importFrom(htmltools,withTags)
 importFrom(janitor,clean_names)
+importFrom(keyring,key_get)
+importFrom(keyring,key_list)
+importFrom(keyring,key_set)
+importFrom(keyring,key_set_with_value)
 importFrom(lubridate,as_date)
 importFrom(lubridate,now)
 importFrom(lubridate,today)
@@ -59,4 +59,3 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
 importFrom(utils,head)
-importFrom(wordcloud2,wordcloud2)
