--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
     shiny,
     shinyalert,
     tidyr
-URL: https://multilex.r-lib.org, https://github.com/r-lib/multilex
+URL: https://gongcastro.github.io/multilex/
 BugReports: https://github.com/gongcastro/multilex/issues
 RoxygenNote: 7.1.1
 Suggests: 
