--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,12 +31,15 @@ Imports:
     shiny,
     shinyalert,
     tidyr
-URL: https://gongcastro.github.io/multilex/
+URL: https://github.com/gongcastro/multilex
 BugReports: https://github.com/gongcastro/multilex/issues
 RoxygenNote: 7.1.1
 Suggests: 
+    rmarkdown,
+    knitr,
     lifecycle,
     shinydashboard,
     testthat
 Depends: 
     R (>= 2.10)
+VignetteBuilder: knitr
