--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,11 @@ pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  articles/ml_connect: ml_connect.html
+  articles/ml_responses: ml_responses.html
+  articles/ml_vocabulary: ml_vocabulary.html
   multilex: multilex.html
-last_built: 2021-08-06T22:12Z
+last_built: 2021-08-06T22:22Z
 urls:
   reference: http://gongcastro.github.io/multilex/reference
   article: http://gongcastro.github.io/multilex/articles
