--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,4 +8,11 @@ reference:
   - title: "Helpers"
     desc: "Internal functions and helpers."
     contents:
-      -
+      - starts_with("get_")
+      - starts_with("fix_")
+      - replace_special_characters
+      - coalesce_by_column
+      - grapes-nin-grapes
+      - first_non_na
+      - starts_with("prop_")
+      - starts_with("import_")
