--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,17 @@ export(`%nin%`)
 export(get_childes_frequency)
 export(get_longitudinal)
 export(get_time_stamp)
-export(ml_app)
 export(ml_connect)
 export(ml_logs)
 export(ml_norms)
 export(ml_participants)
 export(ml_responses)
 export(ml_vocabulary)
-import(Cairo)
+export(prop_adj)
+export(prop_adj_ci)
+export(prop_adj_se)
 import(dplyr)
-import(ggplot2)
-import(shiny)
+importFrom(Rdpack,reprompt)
 importFrom(childesr,get_speaker_statistics)
 importFrom(childesr,get_tokens)
 importFrom(dplyr,arrange)
@@ -42,8 +42,6 @@ importFrom(ggplot2,cut_width)
 importFrom(googlesheets4,gs4_auth)
 importFrom(googlesheets4,gs4_has_token)
 importFrom(googlesheets4,read_sheet)
-importFrom(googlesheets4,sheet_append)
-importFrom(htmltools,withTags)
 importFrom(janitor,clean_names)
 importFrom(keyring,key_get)
 importFrom(keyring,key_list)
@@ -51,7 +49,6 @@ importFrom(keyring,key_set)
 importFrom(keyring,key_set_with_value)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
-importFrom(lubridate,now)
 importFrom(lubridate,today)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
@@ -62,16 +59,11 @@ importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,chr_unserialise_unicode)
 importFrom(scales,label_percent)
-importFrom(scales,percent)
-importFrom(shinyalert,shinyalert)
-importFrom(shinyalert,useShinyalert)
 importFrom(stats,qnorm)
 importFrom(stats,time)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace_all)
-importFrom(stringr,str_to_sentence)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
-importFrom(utils,head)
