--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,11 +1,12 @@
-pandoc: 2.11.2
+pandoc: '2.13'
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  articles/ml_connect: ml_connect.html
-  articles/ml_responses: ml_responses.html
-  articles/ml_vocabulary: ml_vocabulary.html
-last_built: 2021-08-07T16:32Z
+  ml_connect: ml_connect.html
+  ml_norms: ml_norms.html
+  ml_responses: ml_responses.html
+  ml_vocabulary: ml_vocabulary.html
+last_built: 2021-10-27T08:26Z
 urls:
   reference: http://gongcastro.github.io/multilex/reference
   article: http://gongcastro.github.io/multilex/articles
