--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ License: CC BY 4.0
 Imports: 
     childesr,
     dplyr,
-    formr,
+    formr (>= 0.9.1),
     ggplot2,
     googlesheets4,
     httr,
@@ -44,4 +44,5 @@ Depends:
     R (>= 2.10)
 VignetteBuilder: knitr
 Language: en-US
-
+Remotes:  
+    github::rubenarslan/formr
