--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,7 +2,8 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, test]
+
   pull_request:
     branches: [main, master]
 
@@ -20,6 +21,11 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           use-public-rspm: true
+
+      - name: Create keyring credentials
+        run: |
+          keyring::key_create("keys")
+          keyring::key_set_with_value("multilex", "gonzalo.garciadecastro@upf.edu", Sys.getenv("ML_PWD"))
 
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
