--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -26,6 +26,13 @@ jobs:
         with:
           extra-packages: rcmdcheck
 
+      - name: Set environment variables
+        env:
+          ML_PWD: ${{ secrets.ML_PWD }}
+        run: |
+          Sys.setenv(ML_PWD = $ML_PWD)
+        shell: Rscript {0}
+
       - uses: r-lib/actions/check-r-package@v1
 
       - name: Show testthat output
