--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,7 +30,7 @@ jobs:
         env:
           ML_PWD: ${{ secrets.ML_PWD }}
         run: |
-          Sys.setenv(ML_PWD = $ML_PWD)
+          Sys.setenv(ML_PWD = '$ML_PWD')
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v1
