Use lubridate to compute ages to fix #27

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(keyring,key_set)
 importFrom(keyring,key_set_with_value)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
+importFrom(lubridate,time_length)
 importFrom(lubridate,today)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
