--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,5 @@
+^renv$
+^renv\.lock$
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
@@ -16,3 +18,4 @@
 ^.Rprofile$
 ^CODE_OF_CONDUCT.md
 ^CONTRIBUTING.md
+^.Renviron
